[package]
name = "hello-wasm"
version = "0.1.0"
authors = ["Hector hectorbennett@outlook.com"]
license = "MIT/Apache-2.0"
repository = "https://github.com/hectorbennett/rust-wasm-test"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"




# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
